# libpolyp

./: CMakeLists.txt  LICENSE
include/: point.h  polygon.h  polyp.h
include/libpolyp/: polygon.h  vertex.h
src/: CMakeLists.txt  config.h.cmake  point.cpp  polygon.cpp
t/: CMakeLists.txt  point.cpp  polygon.cpp  vertex.cpp
t/point/: CMakeLists.txt  main.cpp
t/polygon/: CMakeLists.txt  main.cpp
